--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="Prixz" />
+		<meta name="google" content="notranslate" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/prixz144.png" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
@@ -15,6 +16,10 @@
 		<link
 			href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap"
 			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
 		/>
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
